# easy-sanity

./: .env.example  .gitignore  README.md  browser_state.py  browser_tools.py  main.py  mcp-config-example.json  pyproject.toml  sample_tasks.json  settings.py  task_tools.py
artifacts/reports/: 20260503T161928Z-validate-domain-understanding.md
browser/: __init__.py  domain.py  report_manager.py  state.py  tools.py
browser/backends/: __init__.py  base.py  browser_harness_backend.py  factory.py  playwright_backend.py
config/: settings.py
data/: profiles.json
data/app_memory/use-browser-b0eb4bca39/: memory.json  memory.md
docs/: agent-documentation.md  browser-harness-roadmap.md  features.md  installation.md  roadmap.md  testcases.md  versioning.md
easy_sanity/: cli.py  server.py
easy_sanity/resources/: __init__.py
memory/: __init__.py  store.py  tools.py
prompts/: __init__.py  browser_prompts.py
scripts/: setup.sh
tasks/: __init__.py  tools.py
test_pages/: domain_understanding.html  login_form.html
